DBTOOLS-1777 added returning analysing